# dino.nvim

./: .gitignore  Cargo.toml  LICENSE  README.md  colors.txt  install.sh
src/: colorizer.rs  colorscheme.rs  completion.rs  keybindings.rs  lib.rs  options.rs  packages.rs
