[package]
name = "dino-nvim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = ["mlua"] }
dirs = "4.0"
git2 = "0.15"
mlua = { version = "0.8", features = ["luajit"] }
lazy_static = "*"
regex = "1.6"
colors-transform = "0.2"
